--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>13.0</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>2.4.0</version>
+		</dependency>
     </dependencies>
 
 
